--- a/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
+++ b/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
@@ -419,8 +419,8 @@
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="tfDesc" alignment="0" min="-2" pref="458" max="-2" attributes="0"/>
-                                              <Component id="jLabel15" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
+                                              <Component id="jcbProdS" min="-2" pref="458" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
@@ -501,12 +501,12 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="tfIdProdS" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="tfDesc" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="tfQnt" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="tfVun1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbGrupo" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbExecutor" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="ftPreUn" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jcbProdS" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -550,13 +550,6 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="tfIdProdS">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI" size="14" style="0"/>
-                    </Property>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JTextField" name="tfDesc">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="14" style="0"/>
@@ -800,6 +793,22 @@
                   </Properties>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JFormattedTextField(mfPreTot);"/>
+                  </AuxValues>
+                </Component>
+                <Component class="javax.swing.JComboBox" name="jcbProdS">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Segoe UI" size="14" style="0"/>
+                    </Property>
+                    <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                      <StringArray count="0"/>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbProdSItemStateChanged"/>
+                  </Events>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
