--- a/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
+++ b/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
@@ -425,20 +425,20 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
-                                                  <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" alignment="0" attributes="0">
                                                   <Component id="tfQnt" min="-2" pref="95" max="-2" attributes="0"/>
                                                   <EmptySpace max="-2" attributes="0"/>
                                                   <Component id="ftPreUn" min="-2" pref="105" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Group type="102" alignment="0" attributes="0">
+                                                  <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
+                                                  <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
-                                              <Component id="tfVun1" min="-2" pref="95" max="-2" attributes="0"/>
+                                              <Component id="ftPreUn1" min="-2" pref="105" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
@@ -461,7 +461,7 @@
                                           <Component id="ftTotal" min="-2" pref="243" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace min="17" pref="482" max="32767" attributes="0"/>
+                                  <EmptySpace min="17" pref="472" max="32767" attributes="0"/>
                               </Group>
                               <Component id="jScrollPane2" max="32767" attributes="0"/>
                               <Component id="jSeparator3" alignment="0" max="32767" attributes="0"/>
@@ -502,11 +502,11 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="tfIdProdS" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="tfQnt" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="tfVun1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbGrupo" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbExecutor" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="ftPreUn" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbProdS" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="ftPreUn1" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -526,8 +526,7 @@
                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           <Component id="jLabel23" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" pref="200" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jScrollPane2" pref="206" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -585,13 +584,6 @@
                       <Font name="Segoe UI" size="16" style="0"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="$ Unit&#xe1;rio"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JTextField" name="tfVun1">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI" size="14" style="0"/>
-                    </Property>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel18">
@@ -809,6 +801,16 @@
                   </Events>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                  </AuxValues>
+                </Component>
+                <Component class="javax.swing.JFormattedTextField" name="ftPreUn1">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Segoe UI" size="14" style="0"/>
+                    </Property>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JFormattedTextField(mfPreTot);"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
