--- a/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
+++ b/src/main/java/com/mycompany/visao/OrdServ/Ordem_de_servico.form
@@ -671,6 +671,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="Incluir item na O.S"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JSeparator" name="jSeparator2">
                     </Component>
@@ -702,48 +705,12 @@
                         <Component class="javax.swing.JTable" name="jTable1">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="7" rowCount="4">
-                                <Column editable="false" title="C&#xf3;digo" type="java.lang.Object"/>
-                                <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
-                                <Column editable="false" title="Qnt" type="java.lang.Object"/>
-                                <Column editable="false" title="R$ Unit&#xe1;rio" type="java.lang.Object"/>
-                                <Column editable="false" title="R$ Total" type="java.lang.Object"/>
-                                <Column editable="false" title="Executor" type="java.lang.Object"/>
+                              <Table columnCount="1" rowCount="4">
                                 <Column editable="false" title="" type="java.lang.Object"/>
                               </Table>
                             </Property>
                             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                               <TableColumnModel selectionModel="0">
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
-                                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                                  <Title/>
-                                  <Editor/>
-                                  <Renderer/>
-                                </Column>
                                 <Column maxWidth="-1" minWidth="-1" prefWidth="5" resizable="true">
                                   <Title/>
                                   <Editor/>
